in wich i fix more random things
* add more attributes to user params permit in admin
* shelly cloud hint color in mobile sidebar
* team page on mobile now is not too small to read

--- a/app/assets/stylesheets/pages/single_events.css.scss
+++ b/app/assets/stylesheets/pages/single_events.css.scss
@@ -81,10 +81,13 @@
         margin: 15px 0px 20px 20px;
       }
 
-      .event-image {
+      .event-image-box {
         max-width: 350px;
-        max-height: 350px;
-        margin-bottom: 10px;
+        .event-image {
+          max-width: 100%;
+          max-height: 350px;
+          margin-bottom: 10px;
+        }
       }
 
       .hashtag {
